--- a/lecture2/Numpy_Practical.ipynb
+++ b/lecture2/Numpy_Practical.ipynb
@@ -563,7 +563,7 @@
    ],
    "source": [
     "array = np.array([2, 4, 3, 5, 6, 12, 34, 2, 34, 5])\n",
-    "#each weight is given number's occurence count"
+    "#each weight is given number's occurence count",
     "weights = [np.count_nonzero(array == el) for el in array]\n",
     "np.average(array, weights=weights)"
    ]
