--- a/lecture3/pandas_practical.ipynb
+++ b/lecture3/pandas_practical.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -129,7 +129,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 4
+     "execution_count": 34
     }
    ],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -162,11 +162,11 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 5
+     "execution_count": 35
     }
    ],
    "source": [
-    "df[:][:3]\n"
+    "df[:3]\n"
    ]
   },
   {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -189,16 +189,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "  animal  age\na    cat  2.5\nb    cat  3.0\nc  snake  0.5\nd    dog  NaN\ne    dog  5.0\nf    cat  2.0\ng  snake  4.5\nh    cat  NaN\ni    dog  7.0\nj    dog  3.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>animal</th>\n      <th>age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>a</th>\n      <td>cat</td>\n      <td>2.5</td>\n    </tr>\n    <tr>\n      <th>b</th>\n      <td>cat</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>c</th>\n      <td>snake</td>\n      <td>0.5</td>\n    </tr>\n    <tr>\n      <th>d</th>\n      <td>dog</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>e</th>\n      <td>dog</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>f</th>\n      <td>cat</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>g</th>\n      <td>snake</td>\n      <td>4.5</td>\n    </tr>\n    <tr>\n      <th>h</th>\n      <td>cat</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>i</th>\n      <td>dog</td>\n      <td>7.0</td>\n    </tr>\n    <tr>\n      <th>j</th>\n      <td>dog</td>\n      <td>3.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "float"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 6
+     "execution_count": 57
     }
    ],
    "source": [
-    "df[['animal','age']]\n"
+    "d=df[['animal','age']]\n",
+    "type(np.NaN)"
    ]
   },
   {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -226,7 +226,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 7
+     "execution_count": 37
     }
    ],
    "source": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
@@ -943,7 +943,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 31
+     "execution_count": 29
     }
    ],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -988,7 +988,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 36
+     "execution_count": 30
     }
    ],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1026,7 +1026,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 37
+     "execution_count": 31
     }
    ],
    "source": [
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1063,7 +1063,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 41
+     "execution_count": 32
     }
    ],
    "source": [
