Lecture4 Matplotlib tasks done

--- a/lecture3/Pandas_Homework.ipynb
+++ b/lecture3/Pandas_Homework.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "baby_names = pd.read_csv('data/baby_names.csv')\n"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -88,7 +88,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 177
+     "execution_count": 3
     }
    ],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -120,7 +120,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 178
+     "execution_count": 4
     }
    ],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -147,19 +147,21 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "Females are more\n"
-     ],
-     "output_type": "stream"
+     "data": {
+      "text/plain": "Riley       12\nVictoria    11\nZoey        11\nNevaeh      11\nBrooke      11\n            ..\nFrances      1\nEverly       1\nMeadow       1\nRobert       1\nJemma        1\nName: Name, Length: 575, dtype: int64"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 12
     }
    ],
    "source": [
-    "gender_counts = baby_names.groupby('Gender').count()\n",
-    "if gender_counts['Name']['F']>gender_counts['Name']['M']:\n",
-    "    print('Females are more')\n",
-    "else:\n",
-    "    print('Males are more')\n",
+    "baby_names['Name'].value_counts()\n",
+    "# gender_counts = baby_names.groupby('Gender').count()\n",
+    "# if gender_counts['Name']['F']>gender_counts['Name']['M']:\n",
+    "#     print('Females are more')\n",
+    "# else:\n",
+    "#     print('Males are more')\n",
     "    "
    ]
   },
