--- a/lecture2/Numpy_Practical.ipynb
+++ b/lecture2/Numpy_Practical.ipynb
@@ -11,8 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -29,18 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
-      ]
+      "text/plain": "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 7
     }
    ],
    "source": [
@@ -59,8 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "help(np.add)"
@@ -77,18 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
-      ]
+      "text/plain": "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 8
     }
    ],
    "source": [
@@ -108,20 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33,\n       32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16,\n       15, 14, 13, 12, 11, 10])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.arange(10,50)\n"
    ]
@@ -137,20 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33,\n       32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16,\n       15, 14, 13, 12, 11, 10])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array[::-1]"
    ]
@@ -166,20 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 2],\n       [3, 4, 5],\n       [6, 7, 8]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "np.arange(0,9).reshape(3,3)"
    ]
@@ -195,20 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([0, 1, 4]),)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "np.nonzero([1,2,0,0,4,0])"
    ]
@@ -224,20 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 8, 19, 11],\n        [ 3, 15,  7],\n        [ 2, 14, 12]],\n\n       [[18, 10,  4],\n        [ 1, 18,  9],\n        [ 1, 17, 12]],\n\n       [[11,  3,  1],\n        [ 6,  2, 14],\n        [18, 12, 10]]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "np.random.randint(1,20, size=(3,3,3))"
    ]
@@ -253,17 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n19\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.random.randint(20, size=(10,10))\n",
     "min_ = array.min()\n",
@@ -283,18 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.4471612829672166"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-e0c8ede207fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ],
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error"
     }
    ],
    "source": [
@@ -313,20 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 5, 6, 7])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.arange(0,11)\n",
     "array[(3<array) & (array<8)]"
@@ -343,20 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([6, 8, 0, 4, 4, 8, 0, 0, 0, 6, 6])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.random.randint(0,10, size=20)\n",
     "array = array[array<5]\n",
@@ -374,20 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([2, 3, 4]),)"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.array([1, 5, 6, 2, -2, 23, 45])\n",
     "np.where(array%2==0)"
@@ -404,20 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([ 0,  3,  6,  9, 12, 15, 18]),)"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.arange(0, 20)\n",
     "np.where(array%3==0)"
@@ -434,20 +384,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 2, 3],\n       [0, 1, 2, 3],\n       [0, 1, 2, 3],\n       [0, 1, 2, 3],\n       [0, 1, 2, 3]])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "np.tile(np.arange(0,4),(5,1))"
    ]
@@ -463,17 +406,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n0\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.array([[0, 1],[2, 3]])\n",
     "print(np.max(array)) \n",
@@ -491,17 +430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1]\n[2 3]\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.array([[0, 1],[2, 3]])\n",
     "print(np.min(array, axis=0))\n",
@@ -529,7 +464,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "array = np.array([1, 5, 6, 2, -2, 23, 45])\n",
@@ -547,20 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11.8125"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.array([2, 4, 3, 5, 6, 12, 34, 2, 34, 5])\n",
     "#each weight is given number's occurence count",
@@ -579,20 +511,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 4, 6],\n       [0, 1, 2, 6],\n       [1, 4, 4, 9]])"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "array = np.array([[4, 2, 6, 1],[0, 2, 6, 1],[4, 4, 1, 9]])\n",
     "np.sort(array, axis=1)"
@@ -618,20 +543,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 36, -12],\n       [ -1,   2]])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "a = np.array([[3,6,7],[5,-3,0]])\n",
     "b = np.array([[1,1],[2,1],[3,-3]])\n",
@@ -641,7 +559,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": []
   }
