--- a/Lecture7/Logistic_Regression_Practical_Homework.ipynb
+++ b/Lecture7/Logistic_Regression_Practical_Homework.ipynb
@@ -289,10 +289,11 @@
     "        beta = np.zeros(X.shape[1] + 1)\n",
     "        # adding columns with ones to X\n",
     "        X = np.insert(X, 0, 1, axis=1)\n",
+    "        n = X.shape[0]\n",
     "\n",
     "        step = 1\n",
     "        while step < max_steps:\n",
-    "            beta -= step_size * self.gradient(beta, X, Y)\n",
+    "            beta -= 1 / n * step_size * self.gradient(beta, X, Y)\n",
     "            if np.abs(self.cost_func(X, Y, beta)) < epsilon:\n",
     "                print('Gradient descent converged on {}-th step'.format(str(step)))\n",
     "                break\n",
